--- a/LCTMoodle/Views/HoiDap/XemCauHoi.cshtml
+++ b/LCTMoodle/Views/HoiDap/XemCauHoi.cshtml
@@ -6,7 +6,7 @@
     ViewData["DieuHuong"] = new List<string>()
     {
         "Hỏi đáp", "/HoiDap",
-        Model.tieuDe, "/HoiDap/XemCauHoi/" + Model.ma
+        Model.tieuDe, "/HoiDap/Xem/" + Model.ma
     };
 
     ViewData["ChucNang"] = new List<string>()
