--- a/LCTMoodle/Views/HoiDap/_Form_TraLoi.cshtml
+++ b/LCTMoodle/Views/HoiDap/_Form_TraLoi.cshtml
@@ -30,7 +30,7 @@
         {
             <section class="khung-button">
                 <button type="submit" class="chap-nhan">Cập nhật</button>
-                <button type="button" class="chap-nhan" data-chuc-nang="huy">Hủy</button>
+                <button type="button" class="can-than" data-chuc-nang="huy">Hủy</button>
             </section>
         }
 
