--- a/LCTMoodle/Views/NguoiDung/DangKy.cshtml
+++ b/LCTMoodle/Views/NguoiDung/DangKy.cshtml
@@ -110,7 +110,7 @@
                     </li>
                     <li>
                         <section class="tieu-de">
-                            <label>Ảnh đại diện</label>
+                            <label>Hình đại diện</label>
                         </section>
                         <section class="noi-dung">
                             <article class="input">
