--- a/LCTMoodle/Content/styles/LCT/Khung.css
+++ b/LCTMoodle/Content/styles/LCT/Khung.css
@@ -705,6 +705,39 @@ main > .cot-trai {
     border: 1px solid #ddd;
 }
 
+/*#region Khung thông tin */
+.menu a:hover {
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.khung-thong-tin {
+    display: flex;
+}
+    .khung-thong-tin .hinh-dai-dien {
+        max-height: 40px;    
+        min-height: 40px;
+        max-width: 40px;
+        min-width: 40px;    
+        position: relative;
+    }
+        .khung-thong-tin .hinh-dai-dien img {
+            height: 100%;
+            width: 100%;
+            position: absolute;
+        }
+    .khung-thong-tin .thong-tin-nguoi-dung {
+        margin-left: 10px;
+        width: 100%;
+    }
+        .khung-thong-tin .thong-tin-nguoi-dung .ten-nguoi-dung {
+            line-height: 40px;
+            color: #555;
+            font-size: 12px;
+            font-weight: bold;
+        }
+/*#endregion */
+
 /*#region Thông tin người dùng */
 
 .cot-trai .khung-thong-tin {
