--- a/LCTMoodle/Views/HoiDap/_Form_CauHoi.cshtml
+++ b/LCTMoodle/Views/HoiDap/_Form_CauHoi.cshtml
@@ -24,7 +24,7 @@
             <li>
                 <section class="noi-dung">
                     <article class="input">
-                        <input name="MaChuDe" data-input-type="chu-de" data-mac-dinh="@(Model != null ? Model.chuDe.ten : null)" placeholder="Tìm và chọn chủ đề"/>
+                        <input name="MaChuDe" data-input-type="chu-de" data-ma-mac-dinh="@(Model.chuDe != null ? Model.chuDe.ma : null)" data-ten-mac-dinh="@(Model.chuDe != null ? Model.chuDe.ten : null)" placeholder="Tìm và chọn chủ đề" />
                     </article>
                 </section>
             </li>        
@@ -33,7 +33,7 @@
             @if (Model != null)
             {
                 <button type="submit" class="chap-nhan">Cập nhật</button>
-                <button type="button" data-chuc-nang="huy" class="canh-bao">Hủy</button>
+                <button type="button" data-chuc-nang="huy" class="can-than">Hủy</button>
             }
             else
             {
