--- a/LCTMoodle/Views/NguoiDung/Xem.cshtml
+++ b/LCTMoodle/Views/NguoiDung/Xem.cshtml
@@ -8,7 +8,7 @@
         List<string> chucNang = new List<string>();
         
         chucNang.Add("Cập nhật thông tin cá nhân");
-        chucNang.Add("href='/NguoiDung/SuaNguoiDung/" + Model.ma + "'");
+        chucNang.Add("href='/NguoiDung/Sua/" + Model.ma + "'");
 
         ViewData["ChucNang"] = chucNang;
     }
