--- a/LCTMoodle/Views/TrangChu/FormMau.cshtml
+++ b/LCTMoodle/Views/TrangChu/FormMau.cshtml
@@ -169,9 +169,9 @@
                     </section>
                     <section class="noi-dung">
                         <article class="input">
-                            <input type="checkbox" name="name" value="" data-text="Checkbox" data-mac-dinh />
-                            <input type="checkbox" name="name" value="" data-text="Checkbox" data-mac-dinh />
-                            <input type="checkbox" name="name" value="" data-text="Checkbox" />
+                            <input style="width: auto;" type="checkbox" name="name" value="" data-text="Checkbox" data-mac-dinh />
+                            <input style="width: auto;" type="checkbox" name="name" value="" data-text="Checkbox" data-mac-dinh />
+                            <input style="width: auto;" type="checkbox" name="name" value="" data-text="Checkbox" />
                         </article>
                     </section>
                 </li>
