--- a/LCTMoodle/Views/KhoaHoc/DanhSachThanhVien.cshtml
+++ b/LCTMoodle/Views/KhoaHoc/DanhSachThanhVien.cshtml
@@ -15,8 +15,7 @@
 
     List<string> chucNang = new List<string>() 
     {
-        "Danh sách bài viết", "href='/KhoaHoc/" + Model.ma + "'",
-        "Danh sách chặn", "href='/KhoaHoc/DanhSachChan/" + Model.ma + "'"
+        "Danh sách bài viết", "href='/KhoaHoc/" + Model.ma + "'"
     };
 
     ViewData["ChucNang"] = chucNang;
