--- a/LCTMoodle/Views/BaiTapNop/_Khung.cshtml
+++ b/LCTMoodle/Views/BaiTapNop/_Khung.cshtml
@@ -43,7 +43,7 @@
     }
 </section>
 <form data-doi-tuong="nop-bai-form" class="lct-form khung-nop">
-    <input type="hidden" name="BaiVietBaiTap" value="@ViewData["MaBaiVietBaiTap"]" />
+    <input type="hidden" name="MaBaiVietBaiTap" value="@ViewData["MaBaiVietBaiTap"]" />
     <ul style="flex-wrap: nowrap; padding: 5px 10px 10px;">
         <li style="margin: 0; min-width: 32px; max-width: 32px;">
             <i data-chuc-nang="thay-doi-input" title="Nộp bằng đường dẫn" data-value="duong-dan" style="line-height: 32px; width: 32px; font-size: 20px; color: #888; cursor: pointer;" class="pe-7s-cloud"></i>
@@ -51,7 +51,7 @@
         <li data-doi-tuong="tap-tin" style="width: 100%; margin: 0;">
             <section class="noi-dung">
                 <article class="input">
-                    <input name="TapTin" data-validate="bat-buoc" type="file" />
+                    <input name="MaTapTin" data-validate="bat-buoc" type="file" />
                 </article>
             </section>
         </li>
