--- a/LCTMoodle/Views/BaiVietDienDan/_Khung.cshtml
+++ b/LCTMoodle/Views/BaiVietDienDan/_Khung.cshtml
@@ -3,8 +3,8 @@
 
 @{
     var quyen = (string[])ViewData["Quyen"];
-    
-    bool coQuyenThem = QuyenHelper.co(quyen, "DienDan_Them");
+
+    bool coQuyenThem = true;//QuyenHelper.co(quyen, "DienDan_Them");
 }
 
 @if (coQuyenThem)
