--- a/LCTMoodle/Views/ChuDe/_Form.cshtml
+++ b/LCTMoodle/Views/ChuDe/_Form.cshtml
@@ -4,7 +4,7 @@
         Tạo chủ đề
     </section>
     <form id="tao_chu_de_form" class="noi-dung lct-form">
-        <input type="hidden" name="Cha" value="@Model" />
+        <input type="hidden" name="MaCha" value="@Model" />
         <ul>
             <li>
                 <section class="tieu-de">
@@ -38,7 +38,7 @@
                 </section>
                 <section class="noi-dung">
                     <article class="input">
-                        <input type="file" name="HinhDaiDien" />
+                        <input type="file" name="MaHinhDaiDien" />
                     </article>
                 </section>
             </li>
