--- a/LCTMoodle/Views/KhoaHoc/DanhSachCuaToi.cshtml
+++ b/LCTMoodle/Views/KhoaHoc/DanhSachCuaToi.cshtml
@@ -30,7 +30,7 @@
         </section>
         <section class="noi-dung khung-khoa-hoc">
             <ul class="danh-sach">                
-                @Html.Partial("~/Views/KhoaHoc/_DanhSach.cshtml", dsThamGia);
+                @Html.Partial("~/Views/KhoaHoc/_DanhSach.cshtml", dsThamGia)
             </ul>
         </section>
     </article>      
@@ -44,7 +44,7 @@
         </section>
         <section class="noi-dung khung-khoa-hoc">
             <ul class="danh-sach">                
-                @Html.Partial("~/Views/KhoaHoc/_DanhSach.cshtml", dsDangKy);
+                @Html.Partial("~/Views/KhoaHoc/_DanhSach.cshtml", dsDangKy)
             </ul>
         </section>
     </article>      
@@ -58,7 +58,7 @@
         </section>
         <section class="noi-dung khung-khoa-hoc">
             <ul class="danh-sach">
-                @Html.Partial("~/Views/KhoaHoc/_DanhSach.cshtml", dsDuocMoi);
+                @Html.Partial("~/Views/KhoaHoc/_DanhSach.cshtml", dsDuocMoi)
             </ul>
         </section>
     </article>      
@@ -72,7 +72,7 @@
         </section>
         <section class="noi-dung khung-khoa-hoc">
             <ul class="danh-sach">
-                @Html.Partial("~/Views/KhoaHoc/_DanhSach.cshtml", dsBiChan);
+                @Html.Partial("~/Views/KhoaHoc/_DanhSach.cshtml", dsBiChan)
             </ul>
         </section>
     </article>      
