--- a/LCTMoodle/Views/Quyen/QuanLy.cshtml
+++ b/LCTMoodle/Views/Quyen/QuanLy.cshtml
@@ -69,7 +69,7 @@
                             <a data-chuc-nang="chon-pham-vi" data-ma="ND">Người dùng</a>
                         </li>
                         <li class="item">
-                            <a data-chuc-nang="chon-pham-vi" data-ma="CD">Chủ đề</a>
+                            <a data-chuc-nang="chon-pham-vi" data-ma="CD" data-chung>Chủ đề</a>
                         </li>
                         <li class="item">
                             <a data-chuc-nang="chon-pham-vi" data-ma="HD">Hỏi đáp</a>
