--- a/LCTMoodle/Views/Quyen/_Form_Nhom.cshtml
+++ b/LCTMoodle/Views/Quyen/_Form_Nhom.cshtml
@@ -4,7 +4,7 @@
     </section>
     <form id="them_nhom_form" class="noi-dung lct-form">
         <input type="hidden" name="PhamVi" value="@ViewData["PhamVi"]" />
-        <input type="hidden" name="DoiTuong" value="@ViewData["DoiTuong"]" />
+        <input type="hidden" name="MaDoiTuong" value="@ViewData["DoiTuong"]" />
         <ul>
             <li>
                 <section class="tieu-de">
