--- a/LCTMoodle/Views/BaiVietBaiTap/_Form.cshtml
+++ b/LCTMoodle/Views/BaiVietBaiTap/_Form.cshtml
@@ -3,7 +3,7 @@
 <form class="noi-dung lct-form" id="tao_bai_viet_form" @(Model != null ? "data-cap-nhat" : null)>
     @if (Model == null)
     {
-        <input type="hidden" name="KhoaHoc" value="@ViewData["MaKhoaHoc"]" />
+        <input type="hidden" name="MaKhoaHoc" value="@ViewData["MaKhoaHoc"]" />
     }
     else
     {
@@ -28,7 +28,7 @@
             <li data-an>
                 <section class="noi-dung">
                     <article class="input">
-                        <input type="file" name="TapTin"
+                        <input type="file" name="MaTapTin"
                             @if (Model != null && Model.tapTin != null) 
                             {  
                                 @: data-ma-mac-dinh="@Model.tapTin.ma" data-loai-mac-dinh="BaiVietDienDan_TapTin"
