--- a/LCTMoodle/Views/BinhLuan/_Khung.cshtml
+++ b/LCTMoodle/Views/BinhLuan/_Khung.cshtml
@@ -17,8 +17,8 @@
     </section>
     <section class="khung-form">
         <form data-doi-tuong="binh-luan-form" class="lct-form">
-            <input name="Loai" value="@ViewData["LoaiDoiTuong"]" type="hidden" />
-            <input name="DoiTuong" value="@ViewData["MaDoiTuong"]" type="hidden" />
+            <input name="LoaiDoiTuong" value="@ViewData["LoaiDoiTuong"]" type="hidden" />
+            <input name="MaDoiTuong" value="@ViewData["MaDoiTuong"]" type="hidden" />
             <ul style="flex-wrap: nowrap; padding: 0; margin: 0;">
                 <li style="margin: 0; width: 100%;">
                     <article class="noi-dung">
@@ -30,7 +30,7 @@
                 <li style="margin: 0; min-width: 34px; max-width: 34px;">
                     <article class="noi-dung">
                         <article class="input" style="border-left: 0;">
-                            <input type="file" name="TapTin" />
+                            <input type="file" name="MaTapTin" />
                         </article>
                     </article>
                 </li>
