--- a/LCTMoodle/Views/KhoaHoc/Xem.cshtml
+++ b/LCTMoodle/Views/KhoaHoc/Xem.cshtml
@@ -93,6 +93,12 @@
                 <span>Bài tập</span>
             </a>
         </li>
+        <li class="tai-lieu">
+            <a data-chuc-nang="hien-thi" data-value="tailieu">
+                <i></i>
+                <span>Tài liệu</span>
+            </a>
+        </li>
         <li class="dien-dan">
             <a data-chuc-nang="hien-thi" data-value="diendan">
                 <i></i>
