--- a/LCTMoodle/Views/NguoiDung/Sua.cshtml
+++ b/LCTMoodle/Views/NguoiDung/Sua.cshtml
@@ -31,21 +31,25 @@
                         </li>
                         <li>
                             <section class="tieu-de">
-                                <label>(*) Họ</label>
+                                <label>Giới Tính</label>
                             </section>
                             <section class="noi-dung">
                                 <article class="input">
-                                    <input type="text" name="Ho" data-validate="bat-buoc" data-mac-dinh="@Model.ho" />
+                                    <input type="radio" name="GioiTinh" value="1" data-text="Nam" style="width:auto;" @(Model.gioiTinh == 1 ? "data-mac-dinh" : null) />
+                                    <input type="radio" name="GioiTinh" value="2" data-text="Nữ" style="width:auto;" @(Model.gioiTinh == 2 ? "data-mac-dinh" : null) />
+                                    <input type="radio" name="GioiTinh" value="0" data-text="Không xác định" @(Model.gioiTinh == 0 ? "data-mac-dinh" : null) style="width:auto;" />
                                 </article>
                             </section>
                         </li>
                         <li>
                             <section class="tieu-de">
-                                <label>(*) Tên</label>
+                                <label>(*) Họ và tên</label>
                             </section>
                             <section class="noi-dung">
                                 <article class="input">
-                                    <input type="text" name="Ten" data-validate="bat-buoc" data-mac-dinh="@Model.ten" />
+                                    <input type="text" placeholder="Họ" name="Ho" data-validate="bat-buoc" style="width:calc(100%/3 - 19px);" data-mac-dinh="@Model.ho" />
+                                    <input type="text" placeholder="Tên lót" name="TenLot" style="width:calc(100%/3 - 19px);" data-mac-dinh="@Model.tenLot" />
+                                    <input type="text" placeholder="Tên" name="Ten" data-validate="bat-buoc" style="width:calc(100%/3 - 19px);" data-mac-dinh="@Model.ten" />
                                 </article>
                             </section>
                         </li>
@@ -75,7 +79,7 @@
                             </section>
                             <section class="noi-dung">
                                 <article class="input">
-                                    <input type="text" name="SoDienThoai" data-mac-dinh="@Model.soDienThoai" />
+                                    <input type="text" name="SoDienThoai" data-validate="so-nguyen" data-mac-dinh="@Model.soDienThoai" />
                                 </article>
                             </section>
                         </li>
@@ -85,7 +89,7 @@
                             </section>
                             <section class="noi-dung">
                                 <article class="input">
-                                    <input type="file" name="MaHinhDaiDien" data-ma-mac-dinh="@(Model.hinhDaiDien != null ? Model.hinhDaiDien.ma : null)" data-loai-mac-dinh="NguoiDung_HinhDaiDien" />
+                                    <input type="file" name="MaHinhDaiDien" data-ma-mac-dinh="@(Model.hinhDaiDien != null ? Model.hinhDaiDien.ma : null)" data-loai-mac-dinh="@(Model.hinhDaiDien != null ? "NguoiDung_HinhDaiDien" : null)" />
                                 </article>
                             </section>
                         </li>
@@ -105,5 +109,5 @@
 }
 else
 {
-    <p>Người dùng không tồn tại</p>
+    <p align="center">Người dùng không tồn tại</p>
 }
