--- a/LCTMoodle/Views/NguoiDung/Xem.cshtml
+++ b/LCTMoodle/Views/NguoiDung/Xem.cshtml
@@ -29,7 +29,7 @@
                     <img src="/LayTapTin/NguoiDung_HinhDaiDien/@(Model.hinhDaiDien != null ? Model.hinhDaiDien.ma : null)" />
                 </div>
                 <div class="thong-tin-nguoi-dung">
-                    <div class="ten-nguoi-dung">@(Model.ho + " " + Model.ten)</div>
+                    <div class="ten-nguoi-dung">@(Model.ho + " " + Model.tenLot + " " + Model.ten)</div>
                     <div class="loai-nguoi-dung">Người dùng</div>
                 </div>
             </article>
@@ -54,7 +54,12 @@
             <div class="tieu-de">Email</div>
             <div class="noi-dung" data-change="Email">@Model.email</div>
             <a href="javascript:void(0)" class="chuc-nang pe-7s-pen" data-edit="Email"></a>
-        </div>        
+        </div>  
+        <div class="dong-noi-dung">
+            <div class="tieu-de">Giới tính</div>
+            <div class="noi-dung" data-change="Email">@Model.gioiTinh</div>
+            <a href="javascript:void(0)" class="chuc-nang pe-7s-pen" data-edit="Email"></a>
+        </div>      
         <div class="dong-noi-dung">
             <div class="tieu-de">Ngày sinh</div>
             <div class="noi-dung" data-change="NgaySinh">@(Model.ngaySinh.HasValue ? @Model.ngaySinh.Value.ToString("dd/M/yyyy") : null)</div>
