--- a/LCTMoodle/Views/NguoiDung/DangKy.cshtml
+++ b/LCTMoodle/Views/NguoiDung/DangKy.cshtml
@@ -118,7 +118,7 @@
                         </section>
                         <section class="noi-dung">
                             <article class="input">
-                                <input type="file" name="HinhDaiDien" />
+                                <input type="file" name="MaHinhDaiDien" />
                             </article>
                         </section>
                     </li>
