--- a/LCTMoodle/Views/LCT/Khung.cshtml
+++ b/LCTMoodle/Views/LCT/Khung.cshtml
@@ -137,7 +137,7 @@
                                         <img src="/LayTapTin/NguoiDung_HinhDaiDien/@(nguoiDung.hinhDaiDien != null ? nguoiDung.hinhDaiDien.ma : null)" />
                                     </div>
                                     <div class="thong-tin-nguoi-dung">
-                                        <div class="ten-nguoi-dung">@nguoiDung.ho @nguoiDung.ten</div>
+                                        <div class="ten-nguoi-dung">@nguoiDung.ho @nguoiDung.tenLot @nguoiDung.ten</div>
                                     </div>
                                 </section>
                             </a>
