--- a/LCTMoodle/Views/HoiDap/_Item_CauHoi.cshtml
+++ b/LCTMoodle/Views/HoiDap/_Item_CauHoi.cshtml
@@ -22,13 +22,14 @@
     </section>
 
     <section class="thong-tin">
-
-        <div class="nguoi-dung">
-            <div class="hinh-dai-dien">
-                <img src="/Content/images/user-avatar.jpg" />
+        <a href="@(Model.nguoiTao != null ? "/NguoiDung/Xem/" + Model.nguoiTao.ma : "void(0)")">
+            <div class="nguoi-dung">
+                <div class="hinh-dai-dien">
+                    <img src="/Content/images/user-avatar.jpg" />
+                </div>
+                <span>@Model.nguoiTao.tenTaiKhoan</span>
             </div>
-            <span>@Model.nguoiTao.tenTaiKhoan</span>
-        </div>
+        </a>
 
         <div class="diem-so">
             <i class="pe-7s-angle-up"></i>
