--- a/LCTMoodle/Views/HoiDap/_Item_TraLoi.cshtml
+++ b/LCTMoodle/Views/HoiDap/_Item_TraLoi.cshtml
@@ -21,12 +21,14 @@
                     </button>
                 </section>
                 <section class="thong-tin">
-                    <div class="nguoi-dung">
-                        <div class="hinh-dai-dien">
-                            <img src="/LayTapTin/NguoiDung_HinhDaiDien/@Model.nguoiTao.hinhDaiDien.ma" />
+                    <a href="@(Model.nguoiTao != null ? "/NguoiDung/Xem/" + Model.nguoiTao.ma : "void(0)")">
+                        <div class="nguoi-dung">
+                            <div class="hinh-dai-dien">
+                                <img src="/LayTapTin/NguoiDung_HinhDaiDien/@Model.nguoiTao.hinhDaiDien.ma" />
+                            </div>
+                            <span>@Model.nguoiTao.tenTaiKhoan</span>
                         </div>
-                        <span>@Model.nguoiTao.tenTaiKhoan</span>
-                    </div>
+                    </a>
                     <div class="diem-so">
                         <i class="pe-7s-angle-up"></i>
                         <span class="so">5</span>
